# MCP-SDK-JSON-DECODE-ERROR

./: README.md  pyproject.toml  test.py
src/json_error_demo/: server.py
