[project]
name = "json-error-demo"
version = "0.1.0"
description = "A test server to demo a JSON decode error in the client SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.1.2",]
[[project.authors]]
name = "TerminalMan"
email = "84923604+SecretiveShell@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
json-error-demo = "json_error_demo:main"
